# license_checker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  application.cpp  application.h  build.bat  build.cmake  build.sh  create.bat  findcoredeps.cmake  logger.h  main.cpp  path.cmake  service.h  stdafx.h  threadpool.cpp  tools.h
client/: CMakeLists.txt  client_license.cpp  client_license.h
client_license/: CMakeLists.txt  client_license.h
common/: common_task.cpp  common_task.h
constants/: CMakeLists.txt  constants.cpp  constants.h
cpprest/: CMakeLists.txt  Dealer.cpp  Rest_Server.cpp  Table.cpp  Table.h  http_server.cpp  http_server.h  messagetypes.h  stdafx.cpp  stdafx.h
event_sink_linux/: CMakeLists.txt  main.cpp  notificator_linux.cpp  notificator_linux.h
event_sink_task/: CMakeLists.txt  event_sink_task.cpp  event_sink_task.h
event_sink_win/: CMakeLists.txt  eventsink.cpp  main.cpp  notificator_win.cpp  notificator_win.h
eventsink/: CMakeLists.txt  eventsink.cpp  eventsink.h  exec_notificator.cpp  exec_notificator.h  main.cpp  notificator.cpp  notificator.h  server-poll.cpp
get_license_task/: CMakeLists.txt  get_license_task.cpp  get_license_task.h  get_license_task_1.cpp
get_update_task/: CMakeLists.txt  ftp.cc  ftp.hh  get_update_task.cpp  get_update_task.h
http_client/: CMakeLists.txt  http_client.cpp  http_client.h  main.cpp
http_server/: CMakeLists.txt  handle_request.h  http_server_async.cpp  http_server_fast.cpp  listener.cpp  listener.h  mime_types.cpp  mime_types.h  request_handler.cpp  request_handler.h  send_lambda.cpp  send_lambda.h  session.cpp  session.h
http_server/templates/: index.txt  test.html  test.txt  test_1.txt  testheader.txt
license/: CMakeLists.txt  license.h  license_checker.cpp  license_checker.h
license_checker/: CMakeLists.txt  license_checker.cpp  license_checker.h
nt_service/: CMakeLists.txt  config_change.cpp  config_change.h  event_sink_task.cpp  event_sink_task.h  eventsink.cpp  eventsink.h  get_license_task.cpp  get_license_task.h  get_task.cpp  get_task.h  initializer.cpp  initializer.h  main.cpp  manager.h  notificator.cpp  notificator.h  ntsvc.cpp  ntsvc.h  worker_task.cpp  worker_task.h
nx_service/: CMakeLists.txt  config_change.cpp  config_change.h  initializer.cpp  initializer.h  itvpn_exec_handler.cpp  itvpn_exec_handler.h  notificator_linux.cpp  notificator_linux.h  nxsvc.cpp  nxsvc.h
parser/: CMakeLists.txt  parser_ini.cpp  parser_ini.h
process_killer_task/: CMakeLists.txt  process_killer_task.cpp  process_killer_task.h
resources/: .envrc  .profile  README  askpass.txt  history_cmd  intsall.sh  itvpn.ini  itvpnagent.ini  itvpnagent.service  lic_check_l.ini  lic_check_w.ini  license.lic  minsk_ittas.ovpn  psk0  run.sh
server/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
server/build.debug/: ALL_BUILD.vcxproj  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  server.vcxproj  server.vcxproj.filters
server/build.debug/server.dir/Debug/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  server.lastbuildstate
server/build.debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
server/res/: form_style.css  index.htm  index.html
server/res/index_files/: adsbygoogle.js  misc.js  pravilnoe-ispolzovanie-cmake-output-directory.htm  pravilnoe-ispolzovanie-cmake-output-directory_002.htm  show_ads_impl_fy2019.js  style_002.css  superfish.js  tag.js  tips.js
template/: CMakeLists.txt  test (2).cpp  test.cpp
template/templates/: Test.html  style.txt  test.txt
tmp/: .clang-format  lic_check_w.ini  readme.txt
tools/: CMakeLists.txt  Singleton.h  callback.h  constants.cpp  constants.h  lic_msg.h  license_helper.h  message_sender.h  platform.h  tools.cpp  tools.h  tracer.h
tracer/: CMakeLists.txt  tracer.cpp  tracer.h
