# CMakeList.txt: проект CMake для license_checker; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

###project(license_checker)
###set(SOURCE_LIB license_checker.cpp license_checker.h)
#include_directories(../client_license)
###message("${CMAKE_CURRENT_SOURCE_DIR}/../client_license")
###add_library (license_checker STATIC ${SOURCE_LIB})
#add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/../client_license")
#add_subdirectory("${CORE_DIR}/../client_license")
###message("${CORE_DIR}")
###target_link_libraries(license_checker client_license)