cmake_minimum_required (VERSION 3.8)
set(SOURCE_LIST parser_ini.cpp parser_ini.h)
add_library(parser STATIC ${SOURCE_LIST})
#add_executable(parser test.cpp ${SOURCE_LIST}) 
#if(CMAKE_HOST_WIN32)
target_include_directories(parser PUBLIC ../tools ${Boost_INCLUDE_DIRS} ${DEFAULT_LIBP7_INCLUDE_DIR})
#elseif(CMAKE_HOST_UNIX)
#    target_include_directories(parser PUBLIC ../tools ${Boost_INCLUDE_DIRS} ${DEFAULT_UNIX_LIBP7_DIR}/Headers)
#endif()
